<resources>
    <string name="app_name">App Compra y Venta</string>

    <string name="default_web_client_id">1037694456372-cqmof8keb0piuu2sb4o8uhpg4vhcg783.apps.googleusercontent.com</string>
    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_vender">Vender</string>
    <string name="Item_Mis_Anuncios">Mis Anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>

    <string name="TituloRL">Titulo</string>

    <string name="Ingresar_email"> Ingresar con Email</string>
    <string name="Ingresar_google"> Ingresar con Google</string>


    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>


    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar</string>


    <!--- Perfil de usuario -->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Información: </string>
    <string name="Txt_nombres">Nombres:</string>
    <string name="Tv_nombres">Nombres Completos</string>
    <string name="Txt_email">Email: </string>
    <string name="Tv_email">email@dominio.com</string>"
    <string name="Txt_nacimiento">Fecha nac: </string>
    <string name="Tv_nacimiento">DD/MM/AAAA</string>"
    <string name="Txt_miembro">Miembro desde: </string>
    <string name="Tv_miembro">DD/MM/AAAA</string>
    <string name="Txt_telefono">Telefono</string>
    <string name="Tv_telefono">0123456789</string>
    <string name="Txt_estado_cuenta">Estado de cuenta: </string>
    <string name="Tv_estado_cuenta">No verificados</string>


    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>
    <string name="Btn_cerrar_sesion">Cerrar sesion</string>

    <!-- Ediar perfil -->
    <string name="Txt_editar_perfil">Editar perfil</string>
    <string name="Et_nombres">Nombres completos</string>
    <string name="Et_f_nac">Fecha de nac.</string>
    <string name="Cod_tef"> +00 </string>
    <string name="Et_telefono">Telefono</string>
    <string name="Btn_actualizar">Actualizar</string>

    <!-- Crear anuncio -->
    <string name="Et_marca">Marca</string>
    <string name="Categoria">Categoria</string>
    <string name="Condicion">Condicion</string>
    <string name="Locacion">Locacion</string>
    <string name="Et_precio">Precio</string>
    <string name="Et_titulo">Titulo</string>
    <string name="Et_descripcion">Descripcion</string>
    <string name="Btn_crear_anuncio">Crear Anuncio</string>"

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>