<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anuncios.CrearAnuncio">
    <RelativeLayout
        android:id="@+id/RL_Imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/agregarImg"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:src="@drawable/agregar_img"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/RL_Imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RV_Imagenes"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_imagenes_seleccionadas"
                app:spanCount="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Marca del artículo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Marca"
                android:layout_below="@+id/RV_Imagenes"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Et_marca"
                    android:hint="@string/Et_marca"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Categoria del artículo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Categoria"
                android:layout_below="@+id/TIL_Marca"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/Categoria"
                    android:hint="@string/Categoria"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Condición del artículo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Condicion"
                android:layout_below="@+id/TIL_Categoria"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/Condicion"
                    android:hint="@string/Condicion"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Precio del artículo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Precio"
                android:layout_below="@+id/TIL_Condicion"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Et_precio"
                    android:hint="@string/Et_precio"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Título del anuncio-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Titulo"
                android:layout_below="@+id/TIL_Precio"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Et_titulo"
                    android:hint="@string/Et_titulo"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Descripción del artículo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Descripcion"
                android:layout_below="@+id/TIL_Titulo"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Et_descripcion"
                    android:hint="@string/Et_descripcion"
                    android:minHeight="100dp"
                    android:inputType="textMultiLine|textCapSentences"
                    android:gravity="top|start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_crear_anuncio"
        android:text="@string/Btn_crear_anuncio"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>

